Rename the main script to match the application name Download the JS SocketIO library to be able to run the app offline Added a box telling players the Sudoku is being generated

--- a/web/css/jumpdrive.css
+++ b/web/css/jumpdrive.css
@@ -90,3 +90,14 @@ input:read-only {
 	border-bottom: 2px solid black;
 }
 
+
+/* --------------------------------------------------------------
+     OTHER
+-------------------------------------------------------------- */
+#generating_progress {
+	position: absolute;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+        font-size: 300%;
+}
