Added debug option to server Server now log clients by IP instead of SID Added comments to JS files JS (clients) now logs in the same manner as server (time status message) Clients now have disabled "Submit coordinates" button, while having the Sudoku solved Bugfixes

--- a/web/css/sci-fi-ui.css
+++ b/web/css/sci-fi-ui.css
@@ -204,6 +204,7 @@
 	color: var(--color-grey-light);
 	border: 2px solid var(--color-grey-light);
 	box-shadow: -4px 0px 0 0px var(--color-blue-medium), -10px 0px 0 0 var(--color-grey-light);
+	cursor: default;
 }
 
 .button_grey::after {
