Admin console added Instant solving of the Sudoku puzzle implemented Difficulty setting implemented Several admin overrides implemented Nicknames implemented - admin can name consoles for better orientation Changing of roles implemented in player - admin can force player console to load different page (= change role)

--- a/web/css/jumpdrive.css
+++ b/web/css/jumpdrive.css
@@ -94,16 +94,18 @@ input:read-only {
 /* --------------------------------------------------------------
      OTHER
 -------------------------------------------------------------- */
-#generating_progress {
+#generating_progress, #destination_unreachable {
 	position: absolute;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
         font-size: 300%;
+        text-align: center;
 }
 
 #client_identification{
 	position: absolute;
         right: 0px;
         bottom: 0px;
+        text-align: center;
 }
