Started using JS objects for holding game info and player info data structures. Created standalone JS file just for them.
Client side now supports multiple routes to be set.
Each route is independent and have standalone coordinates to be solved
Each route can be also deleted.

Administration screen now grants control over everything *so far* implemented

--- a/web/css/sci-fi-ui.css
+++ b/web/css/sci-fi-ui.css
@@ -66,6 +66,7 @@
 	border-radius: 0px 15px 0px 0px;
 	display: inline-block;
 	cursor: pointer;
+        text-align: left;
 
 	transition: background-color 0.05s;
 }
