--- a/web/css/jumpdrive.css
+++ b/web/css/jumpdrive.css
@@ -9,7 +9,9 @@
 }
 
 .jump_pass, .jump_fail {
-	padding: 20px;
+	padding: 10px 5px 10px 5px;
+	text-align: center;
+	font-weight: bold;
 }
 
 .jump_pass {
@@ -56,6 +58,7 @@ td {
 	left: 50%;
 	transform: translate(-50%, 0%);
 	border: 2px solid black;
+	display: inline-block;
 }
 
 input {
@@ -109,3 +112,130 @@ input:read-only {
         bottom: 0px;
         text-align: center;
 }
+/* --------------------------------------------------------------
+     OTHER - DEVEL
+-------------------------------------------------------------- */
+
+.list_of_coordinates{
+        /* 9*height of the sudoku cell */
+        height: 450px;
+        /* fixed width */
+        width: 300px;
+
+        text-align: left;
+        display: inline-block;
+	margin: 30px 0px 30px 0px;
+}
+
+#list_of_coordinates,
+#list_of_details {
+        position: relative;
+	display: block;
+	height: 330px;
+	overflow-y: auto;
+	
+        padding: 5px 0 5px 0;
+	box-shadow: 0 -4px 0 1px #002B48, 0 -5px 0 0 #009BF2, 0 4px 0 0 #002B48, 0 5px 0 0 #009BF2;
+
+}
+#list_of_coordinates::-webkit-scrollbar {
+	background-color: #001A2B ;
+	width: 5px;
+}
+#list_of_coordinates::-webkit-scrollbar-thumb {
+	background-color: #009BF2 ;
+}
+
+#list_of_details{
+	height: 380px;
+
+}
+
+@media (max-height: 800px) { 
+	.list_of_coordinates {
+		/* 9*height of the sudoku cell on a lesser resolution */
+		height: 360px;
+	}
+	#list_of_coordinates{
+        	height: 240px;
+	}
+	#list_of_details {
+        	height: 290px;
+	}
+
+}
+
+
+.list_of_coordinates button {
+	/* fixed width */
+        width: 270px;
+
+        text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
+}
+
+.list_of_coordinates > button {
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+
+.list_of_coordinates > span {
+	font-size: 120%;
+	font-weight: bold;
+	display: block;
+        margin: 5px 0 15px 0;
+}
+
+
+@media (max-width: 1024px) { 
+	.list_of_coordinates {
+		/* fixed width */
+		width: 200px;
+	}
+	.list_of_coordinates button{
+		/* fixed width */
+		width: 170px;
+	}
+.list_of_coordinates > span{
+	font-size: 110%;
+	}
+}
+
+.jump_pass, .jump_fail {
+	width: 265px;
+}
+
+hr {
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid #002B48;
+    margin: 5px 0 5px 0;
+    padding: 0; 
+}
+
+.body_container{
+display: flex;
+}
+
+.left_container, .right_container{
+width: 30%;
+text-align: center;
+}
+
+.center_container{
+width: 40%;
+}
+
+#details_table, 
+#details_table tr,
+#details_table tr td {
+	border: 0px;
+}
+#details_table tr td:first-child {
+	font-weight: bold;
+}
+
+
